--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,4 +20,4 @@ jobs:
     - run: echo "NEO4J_AUTH=neo4j/admin" >> db/credentials.env
     
     - name: Compose the Docker-compose file
-      run: docker compose up
+    - run: docker compose up
