--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "neo4j-driver": "^5.13.0",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
