--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
     "start": "nodemon index.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.4",
     "typescript": "^5.2.2"
