--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts",
+    "build": "tsc",
+    "prod": "node build/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
