--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,10 @@
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.4",
+    "@types/uuid": "^9.0.6",
     "@vitest/coverage-v8": "^0.34.6",
     "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
     "vitest": "^0.34.6"
   }
 }
