--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,6 +15,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+          ref: ${{ github.ref }}
+
     - uses: isbang/compose-action@v1.5.1
       with:
         compose-file: "compose.yml"
