--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,11 @@
     "prod": "node build/index.js"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "neo4j-driver": "^5.13.0",
     "nodemon": "^3.0.1"
   },
