--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,14 @@
     "prod": "node build/index.js"
   },
   "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "neo4j-driver": "^5.13.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
