--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.0",
     "react-router-dom": "^6.17.0",
     "sass": "^1.69.2"
   },
