--- a/compose.yml
+++ b/compose.yml
@@ -19,6 +19,8 @@ services:
       
   backend:
     build: ./backend
+    env_file:
+      - backend/.env
     ports:
       - 5000:5000
     depends_on:
