--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.0",
     "react-router-dom": "^6.17.0",
-    "sass": "^1.69.2"
+    "sass": "^1.69.2",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
