--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "redux": "^4.2.1",
     "sass": "^1.69.2",
     "socket.io-client": "^4.7.2"
   },
