--- a/backend/package.json
+++ b/backend/package.json
@@ -24,13 +24,15 @@
     "neo4j-driver": "^5.13.0",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "unidecode": "^0.1.8"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.4",
+    "@types/unidecode": "^0.1.3",
     "@types/uuid": "^9.0.6",
     "@vitest/coverage-v8": "^0.34.6",
     "typescript": "^5.2.2",
