Add MongoDB chat database

--- a/compose.yml
+++ b/compose.yml
@@ -11,7 +11,10 @@ services:
     volumes:
       - ./db/data:/data
       - ./db/conf:/conf
-
+  chats:
+    image: mongo:latest
+    ports:
+      - 27017:27017
   frontend:
     build: ./frontend
     ports:
@@ -25,6 +28,7 @@ services:
       - 5000:5000
     depends_on:
       - db
+      - chats
     command: sh -c "/wait && npm run prod"
     environment:
       - NEO4J_URI=neo4j://db:7687
