--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "neo4j-driver": "^5.13.0",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
