--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.3",
     "neo4j-driver": "^5.13.0",
     "nodemon": "^3.0.1",
@@ -32,6 +33,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.18",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.8.4",
     "@types/unidecode": "^0.1.3",
     "@types/uuid": "^9.0.6",
