Move MongoDB URI from .env file to compose

--- a/compose.yml
+++ b/compose.yml
@@ -11,10 +11,12 @@ services:
     volumes:
       - ./db/data:/data
       - ./db/conf:/conf
+
   chats:
-    image: mongo:latest
+    image: mongo:4.4.26
     ports:
       - 27017:27017
+
   frontend:
     build: ./frontend
     ports:
@@ -32,6 +34,7 @@ services:
     command: sh -c "/wait && npm run prod"
     environment:
       - NEO4J_URI=neo4j://db:7687
+      - MONGODB_URI=mongodb://chats:27017
       - WAIT_HOSTS=db:7474
       - WAIT_BEFORE_HOSTS=15
       - WAIT_AFTER_HOSTS=3
