Add cypress login test

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,6 +24,6 @@
     "noImplicitReturns": true,
     "strictNullChecks": true
   },
-  "include": ["src"],
+  "include": ["cypress", "src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
