--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,11 +42,12 @@ jobs:
       #     commit_message: Apply formatting changes
       #     branch: ${{ github.head_ref }}
 
-  cypress-run:
+  cypress:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
