--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -33,14 +33,14 @@ jobs:
       - name: Test the backend
         run: cd backend; npm i && npm run test run
 
-      # - name: Format files
-      #   run: cd ..; npm i && npm run prettier:fix
+      - name: Format files
+        run: npm i && npm run prettier:fix
 
-      # - name: Commit changes
-      #   uses: stefanzweifel/git-auto-commit-action@v4
-      #   with:
-      #     commit_message: Apply formatting changes
-      #     branch: ${{ github.head_ref }}
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Apply formatting
+          branch: ${{ github.head_ref }}
 
   cypress:
     needs: build
@@ -49,5 +49,5 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
+      - name: Run Cypress Tests
+        run: cd frontend; npm i && npm run cypress:run
