--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -50,4 +50,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Cypress Tests
-        run: cd frontend; npm i && npm run cypress:run
+        run: cd frontend; npm i && npm run cy:run
