--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -46,8 +46,13 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref }}
+
+      - uses: isbang/compose-action@v1.5.1
+        with:
+          compose-file: "compose.yml"
 
       - name: Run Cypress Tests
-        run: cd frontend; npm i && npm run dev && npm run cy:run
+        run: cd frontend; npm i && npm run cy:run
