--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,6 @@
   "name": "backend",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,6 +12,8 @@
     "build": "tsc",
     "prod": "node build/index.js"
   },
+  "type": "module",
+  "exports": "src/index.ts",
   "dependencies": {
     "@keycloak/keycloak-admin-client": "^24.0.1",
     "@types/jsonwebtoken": "^9.0.5",
