--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.3.2",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
+    "peerjs": "^1.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
