Add peer server to compose yml

--- a/compose.yml
+++ b/compose.yml
@@ -22,6 +22,11 @@ services:
     ports:
       - 5173:80
 
+  peer:
+    build: ./peer
+    ports:
+      - 8000:8000
+
   backend:
     build: ./backend
     env_file:
