--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,12 +29,14 @@
     "redux": "^4.2.1",
     "sass": "^1.69.2",
     "socket.io-client": "^4.7.2",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
