--- a/compose.yml
+++ b/compose.yml
@@ -35,8 +35,9 @@ services:
     environment:
       - NEO4J_URI=neo4j://db:7687
       - MONGODB_URI=mongodb://chats:27017
-      - WAIT_HOSTS=db:7474
-      - WAIT_BEFORE_HOSTS=15
+      - KEYCLOAK_URI=http://keycloak:8080
+      - WAIT_HOSTS=db:7474, keycloak:8080
+      - WAIT_BEFORE_HOSTS=80
       - WAIT_AFTER_HOSTS=3
 
   keycloak:
