--- a/compose.yml
+++ b/compose.yml
@@ -35,8 +35,9 @@ services:
     environment:
       NEO4J_URI: neo4j://db:7687
       MONGODB_URI: mongodb://chats:27017
-      KEYCLOAK_URI: http://keycloak:8080
-      WAIT_HOSTS: db:7474, keycloak:8080
+      KEYCLOAK_URI: http://keycloak:3000
+      KEYCLOAK_ISSUER: http://localhost:3000
+      WAIT_HOSTS: db:7474, keycloak:3000
       WAIT_BEFORE_HOSTS: 80
       WAIT_AFTER_HOSTS: 3
 
@@ -46,7 +47,9 @@ services:
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_HTTP_PORT: 3000
+      KC_HOSTNAME_URL: http://localhost:3000
     ports:
-      - 3000:8080
+      - 3000:3000
     volumes:
       - ./keycloak/realms:/opt/keycloak/data/import
