--- a/compose.yml
+++ b/compose.yml
@@ -52,4 +52,4 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./keycloak/realms:/opt/keycloak/data/import
+      - ./keycloak/import:/opt/keycloak/data/import
