--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
-    "unidecode": "^0.1.8"
+    "unidecode": "^0.1.8",
+    "vite": "^5.2.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
