--- a/compose.yml
+++ b/compose.yml
@@ -53,3 +53,4 @@ services:
       - 3000:3000
     volumes:
       - ./keycloak/import:/opt/keycloak/data/import
+      - ./keycloak/themes:/opt/keycloak/themes
