--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
+    "start": "tsc-watch --onSuccess \"tsx ./src/index.ts\"",
     "test": "vitest",
     "coverage": "vitest --coverage",
     "build": "tsc",
@@ -26,9 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "neo4j-driver": "^5.13.0",
-    "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
-    "ts-node": "^10.9.1",
     "unidecode": "^0.1.8"
   },
   "devDependencies": {
@@ -40,6 +38,8 @@
     "@types/unidecode": "^0.1.3",
     "@types/uuid": "^9.0.6",
     "@vitest/coverage-v8": "^0.34.6",
+    "tsc-watch": "^6.0.4",
+    "tsx": "^4.7.1",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1",
     "vitest": "^0.34.6"
