--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.0.3",
     "neo4j-driver": "^5.13.0",
     "nodemon": "^3.0.1",
+    "peer": "^1.0.2",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
     "unidecode": "^0.1.8",
