--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "tsc-watch --onSuccess \"tsx ./src/index.ts\"",
+    "start": "tsc-watch --noEmit --onSuccess \"tsx ./src/index.ts\"",
     "test": "vitest",
     "coverage": "vitest --coverage",
     "build": "tsc",
