--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "redux": "^4.2.1",
     "sass": "^1.69.2",
     "socket.io-client": "^4.7.2",
+    "use-sound": "^4.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
