--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "neo4j-driver": "^5.13.0",
     "socket.io": "^4.7.2",
     "unidecode": "^0.1.8",
-    "vite": "^5.2.6"
+    "vite": "^5.2.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
