--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "scripts": {
     "start": "tsc-watch --noEmit --onSuccess \"tsx ./src/index.ts\"",
-    "test": "vitest",
+    "test": "vitest --single-thread",
     "coverage": "vitest --coverage",
     "build": "tsc",
     "prod": "node build/index.js"
