--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,6 @@
   "endOfLine": "lf",
   "semi": true,
   "bracketSpacing": true,
-  "quoteProps": "preserve"
+  "quoteProps": "preserve",
+  plugins: ["@ianvs/prettier-plugin-sort-imports"]
 }
