--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   ],
   "dependencies": {
     "prettier": "^3.1.0"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1"
   }
 }
